--- a/src/Views/Preference.axaml
+++ b/src/Views/Preference.axaml
@@ -412,14 +412,12 @@
             <TextBlock Grid.Row="1" Grid.Column="0"
                        Text="{DynamicResource Text.Preference.GPG.Path}"
                        HorizontalAlignment="Right"
-                       Margin="0,0,16,0"
-                       IsVisible="{Binding #me.GPGFormat.NeedFindProgram}"/>
+                       Margin="0,0,16,0"/>
             <TextBox Grid.Row="1" Grid.Column="1"
                      Height="28"
                      CornerRadius="3"
                      Text="{Binding #me.GPGExecutableFile, Mode=TwoWay}"
-                     Watermark="{DynamicResource Text.Preference.GPG.Path.Placeholder}"
-                     IsVisible="{Binding #me.GPGFormat.NeedFindProgram}">
+                     Watermark="{DynamicResource Text.Preference.GPG.Path.Placeholder}">
               <TextBox.InnerRightContent>
                 <Button Classes="icon_button" Width="30" Height="30" Click="SelectGPGExecutable">
                   <Path Data="{StaticResource Icons.Folder.Open}" Fill="{DynamicResource Brush.FG1}"/>
