--- a/src/Views/CommitBaseInfo.axaml
+++ b/src/Views/CommitBaseInfo.axaml
@@ -25,7 +25,7 @@
               </DockPanel>
               <SelectableTextBlock Text="{Binding AuthorTimeStr}"
                                    Margin="2,0,0,0"
-                                   FontSize="{Binding Source={x:Static vm:Preference.Instance}, Path=DefaultFontSize, Converter={x:Static c:FontSizeModifyConverters.Decrease}}"
+                                   FontSize="{Binding Source={x:Static vm:Preference.Instance}, Path=DefaultFontSize, Converter={x:Static c:DoubleConverters.Decrease}}"
                                    Foreground="{DynamicResource Brush.FG2}"/>
             </StackPanel>
           </Grid>
@@ -41,7 +41,7 @@
               </DockPanel>
               <SelectableTextBlock Text="{Binding CommitterTimeStr}"
                                    Margin="2,0,0,0"
-                                   FontSize="{Binding Source={x:Static vm:Preference.Instance}, Path=DefaultFontSize, Converter={x:Static c:FontSizeModifyConverters.Decrease}}"
+                                   FontSize="{Binding Source={x:Static vm:Preference.Instance}, Path=DefaultFontSize, Converter={x:Static c:DoubleConverters.Decrease}}"
                                    Foreground="{DynamicResource Brush.FG2}"/>
             </StackPanel>
           </Grid>
