--- a/src/Views/FileHistories.axaml
+++ b/src/Views/FileHistories.axaml
@@ -56,7 +56,10 @@
       </Grid.ColumnDefinitions>
 
       <DataGrid Grid.Column="0"
-                Background="Transparent"
+                Background="{DynamicResource Brush.Contents}"
+                BorderThickness="1"
+                Margin="8,4,4,8"
+                BorderBrush="{DynamicResource Brush.Border2}"
                 ItemsSource="{Binding Commits}"
                 SelectedItem="{Binding SelectedCommit, Mode=TwoWay}"
                 SelectionMode="Single"
@@ -96,15 +99,15 @@
                     HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                     Background="Transparent"
                     BorderThickness="1,0,0,0"
-                    BorderBrush="{DynamicResource Brush.Border2}"/>
+                    BorderBrush="{DynamicResource Brush.Border0}"/>
 
       <v:LoadingIcon Grid.Column="2" 
                      Width="48" Height="48" 
                      HorizontalAlignment="Center" VerticalAlignment="Center"
                      IsVisible="{Binding IsLoading}"/>
 
-      <Grid Grid.Column="2" RowDefinitions="*,3,*" Margin="0,4,4,4" IsVisible="{Binding !IsLoading}">
-        <ContentControl Grid.Row="0" Content="{Binding DiffContext}">
+      <Grid Grid.Column="2" RowDefinitions="*,3,*" IsVisible="{Binding !IsLoading}">
+        <ContentControl Grid.Row="0" Margin="4,4,8,0" Content="{Binding DiffContext}">
           <ContentControl.DataTemplates>
             <DataTemplate DataType="vm:DiffContext">
               <v:DiffView/>
@@ -117,7 +120,7 @@
                       HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                       Background="Transparent"/>
 
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="2" Margin="0,0,4,4">
           <Border Background="{DynamicResource Brush.Window}">
             <Path Width="128" Height="128"
                   Data="{StaticResource Icons.Detail}"
