--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -455,6 +455,9 @@
   <Style Selector="Button.flat.primary:pointerover /template/ ContentPresenter#PART_ContentPresenter">
     <Setter Property="Background" Value="Transparent"/>
   </Style>
+  <Style Selector="Button.flat.primary TextBlock">
+    <Setter Property="Foreground" Value="{DynamicResource AccentButtonForeground}"/>
+  </Style>
 
   <Style Selector="aes|SearchPanel">
     <Setter Property="Template">
