--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -616,7 +616,7 @@
 
       <!-- Right -->
       <Grid Grid.Column="2" RowDefinitions="Auto,Auto,*"> 
-        <Grid Grid.Row="0" Height="26" ColumnDefinitions="*,Auto,Auto,Auto" Background="{DynamicResource Brush.Conflict}" IsVisible="{Binding InProgressContext, Converter={x:Static ObjectConverters.IsNotNull}}">
+        <Grid Grid.Row="0" Height="28" ColumnDefinitions="*,Auto,Auto,Auto" Background="{DynamicResource Brush.Conflict}" IsVisible="{Binding InProgressContext, Converter={x:Static ObjectConverters.IsNotNull}}">
           <ContentControl Grid.Column="0" Margin="8,0" Content="{Binding InProgressContext}">
             <ContentControl.DataTemplates>
               <DataTemplate DataType="vm:CherryPickInProgress">
@@ -637,14 +637,32 @@
             </ContentControl.DataTemplates>
           </ContentControl>
 
-          <Button Grid.Column="1" Classes="flat" FontWeight="Regular" Content="{DynamicResource Text.Repository.Resolve}" Height="20" Padding="8,0" Margin="4,0" Command="{Binding GotoResolve}">
+          <Button Grid.Column="1" 
+                  Classes="flat" 
+                  FontWeight="Regular"
+                  BorderThickness="0"
+                  Content="{DynamicResource Text.Repository.Resolve}" 
+                  Padding="8,0" Margin="4,0" 
+                  Command="{Binding GotoResolve}">
             <Button.IsVisible>
               <Binding Path="SelectedViewIndex" Converter="{x:Static c:IntConverters.IsNotOne}"/>
             </Button.IsVisible>
           </Button>
-
-          <Button Grid.Column="2" Classes="flat primary" FontWeight="Regular" Content="{DynamicResource Text.Repository.Continue}" Height="20" Padding="8,0" Margin="4,0" Command="{Binding ContinueMerge}" IsVisible="{Binding !HasUnsolvedConflicts}"/>
-          <Button Grid.Column="3" Classes="flat" FontWeight="Regular" Content="{DynamicResource Text.Repository.Abort}" Height="20" Padding="8,0" Margin="4,0" Command="{Binding AbortMerge}"/>
+          <Button Grid.Column="2" 
+                  Classes="flat primary" 
+                  FontWeight="Regular"
+                  BorderThickness="0"
+                  Content="{DynamicResource Text.Repository.Continue}" 
+                  Padding="8,0" Margin="4,0" 
+                  Command="{Binding ContinueMerge}" 
+                  IsVisible="{Binding !HasUnsolvedConflicts}"/>
+          <Button Grid.Column="3" 
+                  Classes="flat" 
+                  FontWeight="Regular"
+                  BorderThickness="0"
+                  Content="{DynamicResource Text.Repository.Abort}" 
+                  Padding="8,0" Margin="4,0" 
+                  Command="{Binding AbortMerge}"/>
         </Grid>
 
         <Border Grid.Row="1" Background="{DynamicResource Brush.Window}" BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border0}">
