--- a/src/Views/Preference.axaml
+++ b/src/Views/Preference.axaml
@@ -58,7 +58,7 @@
           <TabItem.Header>
             <TextBlock Classes="tab_header" Text="{DynamicResource Text.Preference.General}"/>
           </TabItem.Header>
-          <Grid Margin="8" RowDefinitions="32,32,32,32,32,32" ColumnDefinitions="Auto,*">
+          <Grid Margin="8" RowDefinitions="32,32,32,32,32,32,32" ColumnDefinitions="Auto,*">
             <TextBlock Grid.Row="0" Grid.Column="0"
                        Text="{DynamicResource Text.Preference.General.Locale}"
                        HorizontalAlignment="Right"
@@ -113,17 +113,45 @@
                          Foreground="{DynamicResource Brush.FG1}"
                          Text="{Binding MaxHistoryCommits}"/>
             </Grid>
+            
+            <TextBlock Grid.Row="3" Grid.Column="0"
+                       Text="{DynamicResource Text.Preference.General.SubjectGuideLength}"
+                       HorizontalAlignment="Right"
+                       Margin="0,0,16,0"/>
+            <Grid Grid.Row="3" Grid.Column="1" ColumnDefinitions="*,64">
+              <Slider Grid.Column="0"
+                      Minimum="50" Maximum="250"
+                      TickPlacement="BottomRight" TickFrequency="4"
+                      IsSnapToTickEnabled="False"
+                      VerticalAlignment="Center"
+                      Foreground="{DynamicResource Brush.Border1}"
+                      Value="{Binding SubjectGuideLength, Mode=TwoWay}">
+                <Slider.Resources>
+                  <Thickness x:Key="SliderTopHeaderMargin">0,0,0,4</Thickness>
+                  <GridLength x:Key="SliderPreContentMargin">0</GridLength>
+                  <GridLength x:Key="SliderPostContentMargin">0</GridLength>
+                  <CornerRadius x:Key="SliderThumbCornerRadius">8</CornerRadius>
+                  <x:Double x:Key="SliderHorizontalThumbWidth">16</x:Double>
+                  <x:Double x:Key="SliderHorizontalThumbHeight">16</x:Double>
+                </Slider.Resources>
+              </Slider>
 
-            <CheckBox Grid.Row="3" Grid.Column="1"
+              <TextBlock Grid.Column="1"
+                         HorizontalAlignment="Right" VerticalAlignment="Center"
+                         Foreground="{DynamicResource Brush.FG1}"
+                         Text="{Binding SubjectGuideLength}"/>
+            </Grid>
+
+            <CheckBox Grid.Row="4" Grid.Column="1"
                       Content="{DynamicResource Text.Preference.General.RestoreTabs}"
                       IsChecked="{Binding RestoreTabs, Mode=TwoWay}"/>
 
-            <CheckBox Grid.Row="4" Grid.Column="1"
+            <CheckBox Grid.Row="5" Grid.Column="1"
                       Height="32"
                       Content="{DynamicResource Text.Preference.General.UseFixedTabWidth}"
                       IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=UseFixedTabWidth, Mode=TwoWay}"/>
 
-            <CheckBox Grid.Row="5" Grid.Column="1"
+            <CheckBox Grid.Row="6" Grid.Column="1"
                       Height="32"
                       Content="{DynamicResource Text.Preference.General.Check4UpdatesOnStartup}"
                       IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=Check4UpdatesOnStartup, Mode=TwoWay}"/>
