--- a/src/Views/Preference.axaml
+++ b/src/Views/Preference.axaml
@@ -87,10 +87,23 @@
             </ComboBox>
 
             <TextBlock Grid.Row="2" Grid.Column="0"
+                       Text="{DynamicResource Text.Preference.General.SubjectGuideLength}"
+                       HorizontalAlignment="Right"
+                       Margin="0,0,16,0"/>
+            <NumericUpDown Grid.Row="2" Grid.Column="1"
+                           Minimum="50" Maximum="1000" Increment="1"
+                           Height="28"
+                           Padding="4"
+                           ShowButtonSpinner="False"
+                           BorderThickness="1" BorderBrush="{DynamicResource Brush.Border1}"
+                           CornerRadius="3"
+                           Value="{Binding SubjectGuideLength, Mode=TwoWay}"/>
+
+            <TextBlock Grid.Row="3" Grid.Column="0"
                        Text="{DynamicResource Text.Preference.General.MaxHistoryCommits}"
                        HorizontalAlignment="Right"
                        Margin="0,0,16,0"/>
-            <Grid Grid.Row="2" Grid.Column="1" ColumnDefinitions="*,64">
+            <Grid Grid.Row="3" Grid.Column="1" ColumnDefinitions="*,64">
               <Slider Grid.Column="0"
                       Minimum="20000" Maximum="100000"
                       TickPlacement="BottomRight" TickFrequency="5000"
@@ -112,34 +125,6 @@
                          HorizontalAlignment="Right" VerticalAlignment="Center"
                          Foreground="{DynamicResource Brush.FG1}"
                          Text="{Binding MaxHistoryCommits}"/>
-            </Grid>
-            
-            <TextBlock Grid.Row="3" Grid.Column="0"
-                       Text="{DynamicResource Text.Preference.General.SubjectGuideLength}"
-                       HorizontalAlignment="Right"
-                       Margin="0,0,16,0"/>
-            <Grid Grid.Row="3" Grid.Column="1" ColumnDefinitions="*,64">
-              <Slider Grid.Column="0"
-                      Minimum="50" Maximum="250"
-                      TickPlacement="BottomRight" TickFrequency="4"
-                      IsSnapToTickEnabled="False"
-                      VerticalAlignment="Center"
-                      Foreground="{DynamicResource Brush.Border1}"
-                      Value="{Binding SubjectGuideLength, Mode=TwoWay}">
-                <Slider.Resources>
-                  <Thickness x:Key="SliderTopHeaderMargin">0,0,0,4</Thickness>
-                  <GridLength x:Key="SliderPreContentMargin">0</GridLength>
-                  <GridLength x:Key="SliderPostContentMargin">0</GridLength>
-                  <CornerRadius x:Key="SliderThumbCornerRadius">8</CornerRadius>
-                  <x:Double x:Key="SliderHorizontalThumbWidth">16</x:Double>
-                  <x:Double x:Key="SliderHorizontalThumbHeight">16</x:Double>
-                </Slider.Resources>
-              </Slider>
-
-              <TextBlock Grid.Column="1"
-                         HorizontalAlignment="Right" VerticalAlignment="Center"
-                         Foreground="{DynamicResource Brush.FG1}"
-                         Text="{Binding SubjectGuideLength}"/>
             </Grid>
 
             <CheckBox Grid.Row="4" Grid.Column="1"
