ux: remove the `MaxWidth` for user name column in histories (#194)

--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -90,7 +90,7 @@
             </DataGridTemplateColumn.CellTemplate>
           </DataGridTemplateColumn>
 
-          <DataGridTemplateColumn MaxWidth="100" Header="AUTHOR">
+          <DataGridTemplateColumn Header="AUTHOR">
             <DataGridTemplateColumn.CellTemplate>
               <DataTemplate x:DataType="{x:Type m:Commit}">
                 <TextBlock Classes="monospace"
