--- a/src/Views/Welcome.axaml
+++ b/src/Views/Welcome.axaml
@@ -22,6 +22,10 @@
         <Button Classes="icon_button" Width="32" Command="{Binding OpenTerminal}" ToolTip.Tip="{DynamicResource Text.Welcome.OpenTerminal}">
           <Path Width="13" Height="13" Data="{StaticResource Icons.Terminal}"/>
         </Button>
+
+        <Button Classes="icon_button" Width="32" Command="{Binding AddRootNode}" ToolTip.Tip="{DynamicResource Text.Welcome.AddRootFolder}">
+          <Path Width="16" Height="16" Data="{StaticResource Icons.Folder.Add}" Margin="0,4,0,0"/>
+        </Button>
       </StackPanel>
     </Border>
 
