--- a/src/Views/ImageDiffView.axaml
+++ b/src/Views/ImageDiffView.axaml
@@ -142,7 +142,7 @@
 
         <Grid Grid.Row="2" ColumnDefinitions="100,200,100" Margin="0,12,0,0" HorizontalAlignment="Center">
           <StackPanel Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,8,0">
-            <TextBlock Classes="monospace" Text="{DynamicResource Text.Diff.Binary.Old}"/>            
+            <TextBlock Classes="monospace" Text="OLD"/>            
             <TextBlock Classes="monospace"
                        Margin="8,0,0,0"
                        Text="{Binding #ImageBlendSlider.Value, Converter={x:Static c:DoubleConverters.OneMinusToPercentage}}"
@@ -169,7 +169,7 @@
           </Slider>
 
           <StackPanel Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Top" Margin="8,0,0,0">
-            <TextBlock Classes="monospace" Text="{DynamicResource Text.Diff.Binary.New}"/>
+            <TextBlock Classes="monospace" Text="NEW"/>
             <TextBlock Classes="monospace"
                        Margin="8,0,0,0"
                        Text="{Binding #ImageBlendSlider.Value, Converter={x:Static c:DoubleConverters.ToPercentage}}"
