--- a/src/Views/Welcome.axaml
+++ b/src/Views/Welcome.axaml
@@ -22,6 +22,15 @@
         <Button Classes="icon_button" Width="32" Command="{Binding OpenTerminal}" ToolTip.Tip="{DynamicResource Text.Welcome.OpenTerminal}">
           <Path Width="13" Height="13" Data="{StaticResource Icons.Terminal}"/>
         </Button>
+
+        <Rectangle Width="1" Height="16"
+                   Margin="4,0"
+                   VerticalAlignment="Center"
+                   Fill="{DynamicResource Brush.Border2}"/>
+
+        <Button Classes="icon_button" Width="32" Command="{Binding AddRootNode}" ToolTip.Tip="{DynamicResource Text.Welcome.AddRootFolder}">
+          <Path Width="14" Height="14" Margin="0,2,0,0" Data="{StaticResource Icons.Folder.Add}"/>
+        </Button>
       </StackPanel>
     </Border>
 
