--- a/src/Views/Reword.axaml
+++ b/src/Views/Reword.axaml
@@ -12,7 +12,7 @@
     <TextBlock FontSize="18"
                Classes="bold"
                Text="{DynamicResource Text.Reword}"/>
-    <Grid Margin="0,16,0,0" RowDefinitions="32,32,32,32" ColumnDefinitions="100,*">
+    <Grid Margin="0,16,0,0" RowDefinitions="32,160,Auto" ColumnDefinitions="100,*">
       <TextBlock Grid.Row="0" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
@@ -24,16 +24,18 @@
       </Grid>
 
       <TextBlock Grid.Row="1" Grid.Column="0"
-                 HorizontalAlignment="Right" VerticalAlignment="Center"
-                 Margin="0,0,8,0"
+                 HorizontalAlignment="Right" VerticalAlignment="Top"
+                 Margin="0,8,8,0"
                  Text="{DynamicResource Text.Reword.Message}"/>
-      <TextBox Grid.Row="1" Grid.RowSpan="3" Grid.Column="1"
-               Margin="0,4,0,0"
-               CornerRadius="2"
-               AcceptsReturn="True"
-               VerticalContentAlignment="Top"
-               Text="{Binding Message, Mode=TwoWay}"
-               v:AutoFocusBehaviour.IsEnabled="True"/>
+      <v:CommitMessageTextBox Grid.Row="1" Grid.Column="1"
+                              Margin="0,5,0,0"
+                              Text="{Binding Message, Mode=TwoWay}"/>
+      
+      <TextBlock Grid.Row="2" Grid.Column="1"
+                 Margin="0,4,0,0"
+                 Text="Use 'Shift+Enter' to input a new line. 'Enter' is the hotkey of OK button"
+                 TextWrapping="Wrap"
+                 Foreground="{DynamicResource Brush.FG2}"/>
     </Grid>
   </StackPanel>
 </UserControl>
